code/nohup.out
  File "applyGaModel.py", line 128
    print(year)		
        ^
IndentationError: expected an indented block
